--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,22 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Plotly library -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- Link to CSS file -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+
   </head>
   <body>
     <h1>Welcome to My Website</h1>  
     <div id='plot'></div>
 	  <script src="{{ url_for('static', filename='js/map.js') }}"></script>
+
+    <div id='bar'></div>
+	  <script src="{{ url_for('static', filename='js/bar.js') }}"></script>
+
+    <div id='barbyType'></div>
+	  <script src="{{ url_for('static', filename='js/bar.js') }}"></script>
+
+
 
 
   </body>
