--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,14 @@
 
   </head>
   <body>
-    <h1>Random Sample and Crime Data</h1>
+    <h1>Welcome to LA Crime Data Visualizations</h1>
+    <p>Below links for different visualizations of the LA crime data:</p>
+    <ul>
+        <li><a href="/bar" style="color: blue;">Bar Charts</a> - Click here for bar charts of where and what types of crimes are happening in LA</li>
+        <!--<li><a href="/pie" style="color: blue;">Bar Charts</a> - Click here for pie charts of victim demographics for crimes in LA</li>-->
+        <!--<li><a href="/time" style="color: blue;">Bar Charts</a> - Click here for time series charts showing what time of year and time of day crimes frequently occur in LA</li>-->
+    </ul>
+    <h1>Where crime is happening in LA</h1>
     <button id="getSampleBtn">Get Random Sample</button>
     <label for="startDate">Start Date:</label>
     <input type="date" id="startDate">
