consolidated Ani's files and included links in main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,9 @@
     <p>Below links for different visualizations of the LA crime data:</p>
     <ul>
         <li><a href="/bar" style="color: blue;">Bar Charts</a> - Click here for bar charts of where and what types of crimes are happening in LA</li>
-        <!--<li><a href="/pie" style="color: blue;">Bar Charts</a> - Click here for pie charts of victim demographics for crimes in LA</li>-->
-        <!--<li><a href="/time" style="color: blue;">Bar Charts</a> - Click here for time series charts showing what time of year and time of day crimes frequently occur in LA</li>-->
+        <!--<li><a href="/pie" style="color: blue;">Pie Charts</a> - Click here for pie charts of victim demographics for crimes in LA</li>-->
+        <li><a href="/time" style="color: blue;">Time Charts</a> - Click here for time series charts showing what time of year and time of day crimes frequently occur in LA</li>
+        <li><a href="/data_page" style="color: blue;">Data</a> - Click here to view raw data</li>
     </ul>
     <h1>Where crime is happening in LA</h1>
     <button id="getSampleBtn">Get Random Sample</button>
